--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -42,7 +42,6 @@ set_global_assignment -name TOP_LEVEL_ENTITY TimingGenerator128b
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:07:28  AUGUST 06, 2015"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
-set_global_assignment -name TCL_SCRIPT_FILE "../../../../../group/current/docs/commercial-info/marvintest/windows-software/GxFpga/Gx3500Pins.tcl"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -53,3 +52,10 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name BDF_FILE Clocks.bdf
+set_global_assignment -name BDF_FILE Output_Drive.bdf
+set_global_assignment -name TCL_SCRIPT_FILE "../../../../../group/current/docs/commercial-info/marvintest/windows-software/GxFpga/Gx3500Pins.tcl"
+set_global_assignment -name BDF_FILE TimingGenerator128b.bdf
+set_global_assignment -name BDF_FILE Registers.bdf
+set_global_assignment -name QIP_FILE PLL_10MHz.qip
+set_global_assignment -name QIP_FILE PLL_80MHz.qip
