start putting together the main sequence memory
Build this out of a single-port RAM with multiplexed access
between the PCI bus and the sequence decoder.

--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -59,3 +59,4 @@ set_global_assignment -name BDF_FILE TimingGenerator128b.bdf
 set_global_assignment -name BDF_FILE Registers.bdf
 set_global_assignment -name QIP_FILE PLL_10MHz.qip
 set_global_assignment -name QIP_FILE PLL_80MHz.qip
+set_global_assignment -name BDF_FILE SequenceBuffer.bdf
