--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -49,7 +49,6 @@ set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 484
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 8
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name BDF_FILE Clocks.bdf
@@ -60,3 +59,269 @@ set_global_assignment -name BDF_FILE Registers.bdf
 set_global_assignment -name QIP_FILE PLL_10MHz.qip
 set_global_assignment -name QIP_FILE PLL_80MHz.qip
 set_global_assignment -name BDF_FILE SequenceBuffer.bdf
+set_global_assignment -name QIP_FILE MainRAM.qip
+set_location_assignment PIN_A17 -to FDt[31]
+set_location_assignment PIN_B16 -to FDt[30]
+set_location_assignment PIN_A18 -to FDt[29]
+set_location_assignment PIN_B17 -to FDt[28]
+set_location_assignment PIN_A19 -to FDt[26]
+set_location_assignment PIN_B18 -to FDt[25]
+set_location_assignment PIN_A20 -to FDt[23]
+set_location_assignment PIN_B19 -to FDt[22]
+set_location_assignment PIN_B21 -to FDt[20]
+set_location_assignment PIN_B20 -to FDt[19]
+set_location_assignment PIN_C21 -to FDt[18]
+set_location_assignment PIN_B22 -to FDt[17]
+set_location_assignment PIN_C22 -to FDt[16]
+set_location_assignment PIN_D22 -to FDt[15]
+set_location_assignment PIN_D21 -to FDt[14]
+set_location_assignment PIN_E22 -to FDt[13]
+set_location_assignment PIN_E21 -to FDt[12]
+set_location_assignment PIN_F22 -to FDt[7]
+set_location_assignment PIN_F21 -to FDt[6]
+set_location_assignment PIN_W22 -to FlexIO[1]
+set_location_assignment PIN_W21 -to FlexIO[2]
+set_location_assignment PIN_C13 -to Addr[13]
+set_location_assignment PIN_D18 -to Addr[12]
+set_location_assignment PIN_G21 -to RdEn
+set_location_assignment PIN_A12 -to RefClk
+set_location_assignment PIN_G22 -to WrEn
+set_location_assignment PIN_Y21 -to FlexIO[159]
+set_location_assignment PIN_AA22 -to FlexIO[158]
+set_location_assignment PIN_AA21 -to FlexIO[157]
+set_location_assignment PIN_AA20 -to FlexIO[155]
+set_location_assignment PIN_AA19 -to FlexIO[153]
+set_location_assignment PIN_AA18 -to FlexIO[151]
+set_location_assignment PIN_AA17 -to FlexIO[149]
+set_location_assignment PIN_AA16 -to FlexIO[147]
+set_location_assignment PIN_AA15 -to FlexIO[145]
+set_location_assignment PIN_AA14 -to FlexIO[143]
+set_location_assignment PIN_AA13 -to FlexIO[141]
+set_location_assignment PIN_AB10 -to FlexIO[139]
+set_location_assignment PIN_AB9 -to FlexIO[137]
+set_location_assignment PIN_AB8 -to FlexIO[135]
+set_location_assignment PIN_AB7 -to FlexIO[133]
+set_location_assignment PIN_AB6 -to FlexIO[131]
+set_location_assignment PIN_AB5 -to FlexIO[129]
+set_location_assignment PIN_AB4 -to FlexIO[127]
+set_location_assignment PIN_AB3 -to FlexIO[125]
+set_location_assignment PIN_AA1 -to FlexIO[123]
+set_location_assignment PIN_Y1 -to FlexIO[121]
+set_location_assignment PIN_N21 -to MClr
+set_location_assignment PIN_K21 -to FlexIO[93]
+set_location_assignment PIN_M22 -to FlexIO[91]
+set_location_assignment PIN_N22 -to FlexIO[89]
+set_location_assignment PIN_P21 -to FlexIO[87]
+set_location_assignment PIN_R21 -to FlexIO[85]
+set_location_assignment PIN_U21 -to FlexIO[83]
+set_location_assignment PIN_V21 -to FlexIO[81]
+set_location_assignment PIN_V22 -to FlexIO[82]
+set_location_assignment PIN_U22 -to FlexIO[84]
+set_location_assignment PIN_R22 -to FlexIO[86]
+set_location_assignment PIN_P22 -to FlexIO[88]
+set_location_assignment PIN_M21 -to FlexIO[90]
+set_location_assignment PIN_L21 -to FlexIO[92]
+set_location_assignment PIN_J21 -to FlexIO[94]
+set_location_assignment PIN_Y2 -to FlexIO[122]
+set_location_assignment PIN_AA2 -to FlexIO[124]
+set_location_assignment PIN_AA3 -to FlexIO[126]
+set_location_assignment PIN_AA4 -to FlexIO[128]
+set_location_assignment PIN_AA5 -to FlexIO[130]
+set_location_assignment PIN_AA6 -to FlexIO[132]
+set_location_assignment PIN_AA7 -to FlexIO[134]
+set_location_assignment PIN_AA8 -to FlexIO[136]
+set_location_assignment PIN_AA9 -to FlexIO[138]
+set_location_assignment PIN_AA10 -to FlexIO[140]
+set_location_assignment PIN_AB13 -to FlexIO[142]
+set_location_assignment PIN_AB14 -to FlexIO[144]
+set_location_assignment PIN_AB15 -to FlexIO[146]
+set_location_assignment PIN_AB16 -to FlexIO[148]
+set_location_assignment PIN_AB17 -to FlexIO[150]
+set_location_assignment PIN_AB18 -to FlexIO[152]
+set_location_assignment PIN_AB19 -to FlexIO[154]
+set_location_assignment PIN_AB20 -to FlexIO[156]
+set_location_assignment PIN_Y22 -to FlexIO[160]
+set_location_assignment PIN_F1 -to TP[3]
+set_location_assignment PIN_E1 -to TP[2]
+set_location_assignment PIN_F2 -to TP[1]
+set_location_assignment PIN_C1 -to TP[0]
+set_location_assignment PIN_H22 -to FDt[1]
+set_location_assignment PIN_H21 -to FDt[0]
+set_location_assignment PIN_J22 -to Res1
+set_location_assignment PIN_W2 -to FlexIO[37]
+set_location_assignment PIN_W1 -to FlexIO[38]
+set_location_assignment PIN_V2 -to FlexIO[39]
+set_location_assignment PIN_V1 -to FlexIO[40]
+set_location_assignment PIN_B11 -to RefClka
+set_location_assignment PIN_A13 -to Addr[17]
+set_location_assignment PIN_B13 -to Addr[19]
+set_location_assignment PIN_A14 -to Addr[10]
+set_location_assignment PIN_B14 -to FDt[27]
+set_location_assignment PIN_B15 -to Addr[18]
+set_location_assignment PIN_A15 -to Addr[6]
+set_location_assignment PIN_C15 -to FDt[24]
+set_location_assignment PIN_A16 -to Addr[15]
+set_location_assignment PIN_C17 -to Addr[14]
+set_location_assignment PIN_D17 -to Addr[16]
+set_location_assignment PIN_C18 -to FDt[21]
+set_location_assignment PIN_C19 -to Addr[11]
+set_location_assignment PIN_C20 -to Addr[7]
+set_location_assignment PIN_D19 -to Addr[8]
+set_location_assignment PIN_D20 -to FDt[4]
+set_location_assignment PIN_H18 -to Addr[9]
+set_location_assignment PIN_K17 -to Addr[4]
+set_location_assignment PIN_F16 -to FDt[3]
+set_location_assignment PIN_F19 -to FDt[10]
+set_location_assignment PIN_F20 -to FDt[11]
+set_location_assignment PIN_J18 -to Addr[5]
+set_location_assignment PIN_F17 -to FDt[9]
+set_location_assignment PIN_G17 -to FDt[5]
+set_location_assignment PIN_H20 -to FDt[8]
+set_location_assignment PIN_H19 -to FDt[2]
+set_location_assignment PIN_J20 -to Spare[0]
+set_location_assignment PIN_T21 -to CS[1]
+set_location_assignment PIN_T22 -to CS[2]
+set_location_assignment PIN_M19 -to Spare[1]
+set_location_assignment PIN_M20 -to Spare[3]
+set_location_assignment PIN_K18 -to Spare[2]
+set_location_assignment PIN_J19 -to Addr[3]
+set_location_assignment PIN_K19 -to Addr[2]
+set_location_assignment PIN_A10 -to PxiTrig[7]
+set_location_assignment PIN_B10 -to PxiTrig[6]
+set_location_assignment PIN_A9 -to PxiTrig[5]
+set_location_assignment PIN_B9 -to PxiTrig[4]
+set_location_assignment PIN_A8 -to PxiTrig[0]
+set_location_assignment PIN_B8 -to PxiTrig[3]
+set_location_assignment PIN_A7 -to PxiTrig[2]
+set_location_assignment PIN_B7 -to PxiTrig[1]
+set_location_assignment PIN_M1 -to FlexIO[36]
+set_location_assignment PIN_M2 -to FlexIO[35]
+set_location_assignment PIN_M3 -to FlexIO[34]
+set_location_assignment PIN_M4 -to FlexIO[33]
+set_location_assignment PIN_N1 -to FlexIO[32]
+set_location_assignment PIN_N2 -to FlexIO[31]
+set_location_assignment PIN_P1 -to FlexIO[30]
+set_location_assignment PIN_P2 -to FlexIO[29]
+set_location_assignment PIN_P3 -to FlexIO[28]
+set_location_assignment PIN_P4 -to FlexIO[27]
+set_location_assignment PIN_R1 -to FlexIO[26]
+set_location_assignment PIN_R2 -to FlexIO[25]
+set_location_assignment PIN_R3 -to FlexIO[24]
+set_location_assignment PIN_R4 -to FlexIO[23]
+set_location_assignment PIN_T5 -to FlexIO[22]
+set_location_assignment PIN_T4 -to FlexIO[21]
+set_location_assignment PIN_T3 -to FlexIO[20]
+set_location_assignment PIN_U1 -to FlexIO[19]
+set_location_assignment PIN_U2 -to FlexIO[18]
+set_location_assignment PIN_V3 -to FlexIO[17]
+set_location_assignment PIN_V4 -to FlexIO[16]
+set_location_assignment PIN_Y3 -to FlexIO[15]
+set_location_assignment PIN_Y4 -to FlexIO[14]
+set_location_assignment PIN_V5 -to FlexIO[13]
+set_location_assignment PIN_Y6 -to FlexIO[12]
+set_location_assignment PIN_W6 -to FlexIO[11]
+set_location_assignment PIN_V6 -to FlexIO[10]
+set_location_assignment PIN_Y7 -to FlexIO[9]
+set_location_assignment PIN_W7 -to FlexIO[8]
+set_location_assignment PIN_V7 -to FlexIO[7]
+set_location_assignment PIN_Y8 -to FlexIO[6]
+set_location_assignment PIN_W8 -to FlexIO[5]
+set_location_assignment PIN_V8 -to FlexIO[4]
+set_location_assignment PIN_V9 -to FlexIO[3]
+set_location_assignment PIN_N20 -to FlexIO[95]
+set_location_assignment PIN_N19 -to FlexIO[96]
+set_location_assignment PIN_N18 -to FlexIO[97]
+set_location_assignment PIN_V10 -to FlexIO[80]
+set_location_assignment PIN_W10 -to FlexIO[79]
+set_location_assignment PIN_Y10 -to FlexIO[78]
+set_location_assignment PIN_U11 -to FlexIO[77]
+set_location_assignment PIN_V11 -to FlexIO[76]
+set_location_assignment PIN_U12 -to FlexIO[75]
+set_location_assignment PIN_V12 -to FlexIO[74]
+set_location_assignment PIN_U13 -to FlexIO[73]
+set_location_assignment PIN_V13 -to FlexIO[72]
+set_location_assignment PIN_W13 -to FlexIO[71]
+set_location_assignment PIN_Y13 -to FlexIO[70]
+set_location_assignment PIN_U14 -to FlexIO[69]
+set_location_assignment PIN_V14 -to FlexIO[68]
+set_location_assignment PIN_W14 -to FlexIO[67]
+set_location_assignment PIN_Y14 -to FlexIO[66]
+set_location_assignment PIN_V15 -to FlexIO[65]
+set_location_assignment PIN_V16 -to FlexIO[64]
+set_location_assignment PIN_W15 -to FlexIO[63]
+set_location_assignment PIN_Y15 -to FlexIO[62]
+set_location_assignment PIN_U15 -to FlexIO[61]
+set_location_assignment PIN_U16 -to FlexIO[60]
+set_location_assignment PIN_U17 -to FlexIO[59]
+set_location_assignment PIN_W17 -to FlexIO[58]
+set_location_assignment PIN_Y17 -to FlexIO[57]
+set_location_assignment PIN_T18 -to FlexIO[56]
+set_location_assignment PIN_M5 -to FlexIO[55]
+set_location_assignment PIN_W19 -to FlexIO[54]
+set_location_assignment PIN_P7 -to FlexIO[53]
+set_location_assignment PIN_U19 -to FlexIO[52]
+set_location_assignment PIN_N7 -to FlexIO[51]
+set_location_assignment PIN_W20 -to FlexIO[50]
+set_location_assignment PIN_M6 -to FlexIO[49]
+set_location_assignment PIN_J17 -to FlexIO[48]
+set_location_assignment PIN_L6 -to FlexIO[47]
+set_location_assignment PIN_G15 -to FlexIO[46]
+set_location_assignment PIN_G16 -to FlexIO[45]
+set_location_assignment PIN_F13 -to FlexIO[44]
+set_location_assignment PIN_G14 -to FlexIO[43]
+set_location_assignment PIN_G11 -to FlexIO[42]
+set_location_assignment PIN_F14 -to FlexIO[41]
+set_location_assignment PIN_G7 -to FSpr[3]
+set_location_assignment PIN_F9 -to FSpr[2]
+set_location_assignment PIN_F7 -to FSpr[1]
+set_location_assignment PIN_G9 -to FSpr[0]
+set_location_assignment PIN_P6 -to FlexIO[98]
+set_location_assignment PIN_U20 -to FlexIO[99]
+set_location_assignment PIN_N6 -to FlexIO[100]
+set_location_assignment PIN_T20 -to FlexIO[101]
+set_location_assignment PIN_T17 -to FlexIO[102]
+set_location_assignment PIN_T19 -to FlexIO[103]
+set_location_assignment PIN_R20 -to FlexIO[104]
+set_location_assignment PIN_R19 -to FlexIO[105]
+set_location_assignment PIN_R17 -to FlexIO[106]
+set_location_assignment PIN_P17 -to FlexIO[107]
+set_location_assignment PIN_P20 -to FlexIO[108]
+set_location_assignment PIN_N16 -to FlexIO[109]
+set_location_assignment PIN_R18 -to FlexIO[110]
+set_location_assignment PIN_M16 -to FlexIO[111]
+set_location_assignment PIN_N17 -to FlexIO[112]
+set_location_assignment PIN_H17 -to FlexIO[113]
+set_location_assignment PIN_H16 -to FlexIO[114]
+set_location_assignment PIN_F11 -to FlexIO[115]
+set_location_assignment PIN_G13 -to FlexIO[116]
+set_location_assignment PIN_G10 -to FlexIO[117]
+set_location_assignment PIN_F10 -to FlexIO[118]
+set_location_assignment PIN_F8 -to FlexIO[119]
+set_location_assignment PIN_G8 -to FlexIO[120]
+set_location_assignment PIN_C6 -to FSpr[5]
+set_location_assignment PIN_C7 -to FSpr[4]
+set_location_assignment PIN_E13 -to Spare[4]
+set_location_assignment PIN_E14 -to Spare[5]
+set_location_assignment PIN_E15 -to Spare[6]
+set_location_assignment PIN_B3 -to TP[5]
+set_location_assignment PIN_C3 -to TP[4]
+set_location_assignment PIN_B12 -to StarTrig
+set_location_assignment PIN_A11 -to 10Mhz
+set_location_assignment PIN_AB12 -to PCIClock
+set_instance_assignment -name CLOCK_SETTINGS Ref -to RefClk
+set_instance_assignment -name CLOCK_SETTINGS Ref -to RefClka
+set_instance_assignment -name CLOCK_SETTINGS PXI10 -to 10Mhz
+set_instance_assignment -name CLOCK_SETTINGS PCI -to PCIClock
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name GENERATE_SVF_FILE ON
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name QIP_FILE Driver128b.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
