properly handle clock switching in the RAM
Ensuring that the RAM is fully quiesced before switching
clocks lets us finally get a clean(-ish) TimeQuest report!

--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -79,68 +79,12 @@ set_location_assignment PIN_E22 -to FDt[13]
 set_location_assignment PIN_E21 -to FDt[12]
 set_location_assignment PIN_F22 -to FDt[7]
 set_location_assignment PIN_F21 -to FDt[6]
-set_location_assignment PIN_W22 -to FlexIO[1]
-set_location_assignment PIN_W21 -to FlexIO[2]
 set_location_assignment PIN_C13 -to Addr[13]
 set_location_assignment PIN_D18 -to Addr[12]
 set_location_assignment PIN_G21 -to RdEn
 set_location_assignment PIN_A12 -to RefClk
 set_location_assignment PIN_G22 -to WrEn
-set_location_assignment PIN_Y21 -to FlexIO[159]
-set_location_assignment PIN_AA22 -to FlexIO[158]
-set_location_assignment PIN_AA21 -to FlexIO[157]
-set_location_assignment PIN_AA20 -to FlexIO[155]
-set_location_assignment PIN_AA19 -to FlexIO[153]
-set_location_assignment PIN_AA18 -to FlexIO[151]
-set_location_assignment PIN_AA17 -to FlexIO[149]
-set_location_assignment PIN_AA16 -to FlexIO[147]
-set_location_assignment PIN_AA15 -to FlexIO[145]
-set_location_assignment PIN_AA14 -to FlexIO[143]
-set_location_assignment PIN_AA13 -to FlexIO[141]
-set_location_assignment PIN_AB10 -to FlexIO[139]
-set_location_assignment PIN_AB9 -to FlexIO[137]
-set_location_assignment PIN_AB8 -to FlexIO[135]
-set_location_assignment PIN_AB7 -to FlexIO[133]
-set_location_assignment PIN_AB6 -to FlexIO[131]
-set_location_assignment PIN_AB5 -to FlexIO[129]
-set_location_assignment PIN_AB4 -to FlexIO[127]
-set_location_assignment PIN_AB3 -to FlexIO[125]
-set_location_assignment PIN_AA1 -to FlexIO[123]
-set_location_assignment PIN_Y1 -to FlexIO[121]
 set_location_assignment PIN_N21 -to MClr
-set_location_assignment PIN_K21 -to FlexIO[93]
-set_location_assignment PIN_M22 -to FlexIO[91]
-set_location_assignment PIN_N22 -to FlexIO[89]
-set_location_assignment PIN_P21 -to FlexIO[87]
-set_location_assignment PIN_R21 -to FlexIO[85]
-set_location_assignment PIN_U21 -to FlexIO[83]
-set_location_assignment PIN_V21 -to FlexIO[81]
-set_location_assignment PIN_V22 -to FlexIO[82]
-set_location_assignment PIN_U22 -to FlexIO[84]
-set_location_assignment PIN_R22 -to FlexIO[86]
-set_location_assignment PIN_P22 -to FlexIO[88]
-set_location_assignment PIN_M21 -to FlexIO[90]
-set_location_assignment PIN_L21 -to FlexIO[92]
-set_location_assignment PIN_J21 -to FlexIO[94]
-set_location_assignment PIN_Y2 -to FlexIO[122]
-set_location_assignment PIN_AA2 -to FlexIO[124]
-set_location_assignment PIN_AA3 -to FlexIO[126]
-set_location_assignment PIN_AA4 -to FlexIO[128]
-set_location_assignment PIN_AA5 -to FlexIO[130]
-set_location_assignment PIN_AA6 -to FlexIO[132]
-set_location_assignment PIN_AA7 -to FlexIO[134]
-set_location_assignment PIN_AA8 -to FlexIO[136]
-set_location_assignment PIN_AA9 -to FlexIO[138]
-set_location_assignment PIN_AA10 -to FlexIO[140]
-set_location_assignment PIN_AB13 -to FlexIO[142]
-set_location_assignment PIN_AB14 -to FlexIO[144]
-set_location_assignment PIN_AB15 -to FlexIO[146]
-set_location_assignment PIN_AB16 -to FlexIO[148]
-set_location_assignment PIN_AB17 -to FlexIO[150]
-set_location_assignment PIN_AB18 -to FlexIO[152]
-set_location_assignment PIN_AB19 -to FlexIO[154]
-set_location_assignment PIN_AB20 -to FlexIO[156]
-set_location_assignment PIN_Y22 -to FlexIO[160]
 set_location_assignment PIN_F1 -to TP[3]
 set_location_assignment PIN_E1 -to TP[2]
 set_location_assignment PIN_F2 -to TP[1]
@@ -148,10 +92,6 @@ set_location_assignment PIN_C1 -to TP[0]
 set_location_assignment PIN_H22 -to FDt[1]
 set_location_assignment PIN_H21 -to FDt[0]
 set_location_assignment PIN_J22 -to Res1
-set_location_assignment PIN_W2 -to FlexIO[37]
-set_location_assignment PIN_W1 -to FlexIO[38]
-set_location_assignment PIN_V2 -to FlexIO[39]
-set_location_assignment PIN_V1 -to FlexIO[40]
 set_location_assignment PIN_B11 -to RefClka
 set_location_assignment PIN_A13 -to Addr[17]
 set_location_assignment PIN_B13 -to Addr[19]
@@ -194,110 +134,10 @@ set_location_assignment PIN_A8 -to PxiTrig[0]
 set_location_assignment PIN_B8 -to PxiTrig[3]
 set_location_assignment PIN_A7 -to PxiTrig[2]
 set_location_assignment PIN_B7 -to PxiTrig[1]
-set_location_assignment PIN_M1 -to FlexIO[36]
-set_location_assignment PIN_M2 -to FlexIO[35]
-set_location_assignment PIN_M3 -to FlexIO[34]
-set_location_assignment PIN_M4 -to FlexIO[33]
-set_location_assignment PIN_N1 -to FlexIO[32]
-set_location_assignment PIN_N2 -to FlexIO[31]
-set_location_assignment PIN_P1 -to FlexIO[30]
-set_location_assignment PIN_P2 -to FlexIO[29]
-set_location_assignment PIN_P3 -to FlexIO[28]
-set_location_assignment PIN_P4 -to FlexIO[27]
-set_location_assignment PIN_R1 -to FlexIO[26]
-set_location_assignment PIN_R2 -to FlexIO[25]
-set_location_assignment PIN_R3 -to FlexIO[24]
-set_location_assignment PIN_R4 -to FlexIO[23]
-set_location_assignment PIN_T5 -to FlexIO[22]
-set_location_assignment PIN_T4 -to FlexIO[21]
-set_location_assignment PIN_T3 -to FlexIO[20]
-set_location_assignment PIN_U1 -to FlexIO[19]
-set_location_assignment PIN_U2 -to FlexIO[18]
-set_location_assignment PIN_V3 -to FlexIO[17]
-set_location_assignment PIN_V4 -to FlexIO[16]
-set_location_assignment PIN_Y3 -to FlexIO[15]
-set_location_assignment PIN_Y4 -to FlexIO[14]
-set_location_assignment PIN_V5 -to FlexIO[13]
-set_location_assignment PIN_Y6 -to FlexIO[12]
-set_location_assignment PIN_W6 -to FlexIO[11]
-set_location_assignment PIN_V6 -to FlexIO[10]
-set_location_assignment PIN_Y7 -to FlexIO[9]
-set_location_assignment PIN_W7 -to FlexIO[8]
-set_location_assignment PIN_V7 -to FlexIO[7]
-set_location_assignment PIN_Y8 -to FlexIO[6]
-set_location_assignment PIN_W8 -to FlexIO[5]
-set_location_assignment PIN_V8 -to FlexIO[4]
-set_location_assignment PIN_V9 -to FlexIO[3]
-set_location_assignment PIN_N20 -to FlexIO[95]
-set_location_assignment PIN_N19 -to FlexIO[96]
-set_location_assignment PIN_N18 -to FlexIO[97]
-set_location_assignment PIN_V10 -to FlexIO[80]
-set_location_assignment PIN_W10 -to FlexIO[79]
-set_location_assignment PIN_Y10 -to FlexIO[78]
-set_location_assignment PIN_U11 -to FlexIO[77]
-set_location_assignment PIN_V11 -to FlexIO[76]
-set_location_assignment PIN_U12 -to FlexIO[75]
-set_location_assignment PIN_V12 -to FlexIO[74]
-set_location_assignment PIN_U13 -to FlexIO[73]
-set_location_assignment PIN_V13 -to FlexIO[72]
-set_location_assignment PIN_W13 -to FlexIO[71]
-set_location_assignment PIN_Y13 -to FlexIO[70]
-set_location_assignment PIN_U14 -to FlexIO[69]
-set_location_assignment PIN_V14 -to FlexIO[68]
-set_location_assignment PIN_W14 -to FlexIO[67]
-set_location_assignment PIN_Y14 -to FlexIO[66]
-set_location_assignment PIN_V15 -to FlexIO[65]
-set_location_assignment PIN_V16 -to FlexIO[64]
-set_location_assignment PIN_W15 -to FlexIO[63]
-set_location_assignment PIN_Y15 -to FlexIO[62]
-set_location_assignment PIN_U15 -to FlexIO[61]
-set_location_assignment PIN_U16 -to FlexIO[60]
-set_location_assignment PIN_U17 -to FlexIO[59]
-set_location_assignment PIN_W17 -to FlexIO[58]
-set_location_assignment PIN_Y17 -to FlexIO[57]
-set_location_assignment PIN_T18 -to FlexIO[56]
-set_location_assignment PIN_M5 -to FlexIO[55]
-set_location_assignment PIN_W19 -to FlexIO[54]
-set_location_assignment PIN_P7 -to FlexIO[53]
-set_location_assignment PIN_U19 -to FlexIO[52]
-set_location_assignment PIN_N7 -to FlexIO[51]
-set_location_assignment PIN_W20 -to FlexIO[50]
-set_location_assignment PIN_M6 -to FlexIO[49]
-set_location_assignment PIN_J17 -to FlexIO[48]
-set_location_assignment PIN_L6 -to FlexIO[47]
-set_location_assignment PIN_G15 -to FlexIO[46]
-set_location_assignment PIN_G16 -to FlexIO[45]
-set_location_assignment PIN_F13 -to FlexIO[44]
-set_location_assignment PIN_G14 -to FlexIO[43]
-set_location_assignment PIN_G11 -to FlexIO[42]
-set_location_assignment PIN_F14 -to FlexIO[41]
 set_location_assignment PIN_G7 -to FSpr[3]
 set_location_assignment PIN_F9 -to FSpr[2]
 set_location_assignment PIN_F7 -to FSpr[1]
 set_location_assignment PIN_G9 -to FSpr[0]
-set_location_assignment PIN_P6 -to FlexIO[98]
-set_location_assignment PIN_U20 -to FlexIO[99]
-set_location_assignment PIN_N6 -to FlexIO[100]
-set_location_assignment PIN_T20 -to FlexIO[101]
-set_location_assignment PIN_T17 -to FlexIO[102]
-set_location_assignment PIN_T19 -to FlexIO[103]
-set_location_assignment PIN_R20 -to FlexIO[104]
-set_location_assignment PIN_R19 -to FlexIO[105]
-set_location_assignment PIN_R17 -to FlexIO[106]
-set_location_assignment PIN_P17 -to FlexIO[107]
-set_location_assignment PIN_P20 -to FlexIO[108]
-set_location_assignment PIN_N16 -to FlexIO[109]
-set_location_assignment PIN_R18 -to FlexIO[110]
-set_location_assignment PIN_M16 -to FlexIO[111]
-set_location_assignment PIN_N17 -to FlexIO[112]
-set_location_assignment PIN_H17 -to FlexIO[113]
-set_location_assignment PIN_H16 -to FlexIO[114]
-set_location_assignment PIN_F11 -to FlexIO[115]
-set_location_assignment PIN_G13 -to FlexIO[116]
-set_location_assignment PIN_G10 -to FlexIO[117]
-set_location_assignment PIN_F10 -to FlexIO[118]
-set_location_assignment PIN_F8 -to FlexIO[119]
-set_location_assignment PIN_G8 -to FlexIO[120]
 set_location_assignment PIN_C6 -to FSpr[5]
 set_location_assignment PIN_C7 -to FSpr[4]
 set_location_assignment PIN_E13 -to Spare[4]
@@ -325,6 +165,166 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name QIP_FILE Driver128b.qip
 set_global_assignment -name SDC_FILE TimingGenerator128b.sdc
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to FlexIO[160..0]
 set_instance_assignment -name SAFE_STATE_MACHINE ON -to *
+set_instance_assignment -name IO_STANDARD "2.5 V" -to FlexIO*
+set_location_assignment PIN_W22 -to FlexIO1
+set_location_assignment PIN_W21 -to FlexIO2
+set_location_assignment PIN_AA18 -to FlexIO151
+set_location_assignment PIN_AA17 -to FlexIO149
+set_location_assignment PIN_AA16 -to FlexIO147
+set_location_assignment PIN_N6 -to FlexIO100
+set_location_assignment PIN_T20 -to FlexIO101
+set_location_assignment PIN_AA15 -to FlexIO145
+set_location_assignment PIN_AA14 -to FlexIO143
+set_location_assignment PIN_AA13 -to FlexIO141
+set_location_assignment PIN_AB10 -to FlexIO139
+set_location_assignment PIN_AB9 -to FlexIO137
+set_location_assignment PIN_AB8 -to FlexIO135
+set_location_assignment PIN_AB7 -to FlexIO133
+set_location_assignment PIN_AB6 -to FlexIO131
+set_location_assignment PIN_AB5 -to FlexIO129
+set_location_assignment PIN_AB4 -to FlexIO127
+set_location_assignment PIN_AB3 -to FlexIO125
+set_location_assignment PIN_AA1 -to FlexIO123
+set_location_assignment PIN_Y1 -to FlexIO121
+set_location_assignment PIN_K21 -to FlexIO93
+set_location_assignment PIN_M22 -to FlexIO91
+set_location_assignment PIN_N22 -to FlexIO89
+set_location_assignment PIN_P21 -to FlexIO87
+set_location_assignment PIN_R21 -to FlexIO85
+set_location_assignment PIN_U21 -to FlexIO83
+set_location_assignment PIN_V21 -to FlexIO81
+set_location_assignment PIN_V22 -to FlexIO82
+set_location_assignment PIN_U22 -to FlexIO84
+set_location_assignment PIN_R22 -to FlexIO86
+set_location_assignment PIN_P22 -to FlexIO88
+set_location_assignment PIN_M21 -to FlexIO90
+set_location_assignment PIN_L21 -to FlexIO92
+set_location_assignment PIN_J21 -to FlexIO94
+set_location_assignment PIN_Y2 -to FlexIO122
+set_location_assignment PIN_AA2 -to FlexIO124
+set_location_assignment PIN_AA3 -to FlexIO126
+set_location_assignment PIN_AA4 -to FlexIO128
+set_location_assignment PIN_AA5 -to FlexIO130
+set_location_assignment PIN_AA6 -to FlexIO132
+set_location_assignment PIN_AA7 -to FlexIO134
+set_location_assignment PIN_AA8 -to FlexIO136
+set_location_assignment PIN_AA9 -to FlexIO138
+set_location_assignment PIN_AA10 -to FlexIO140
+set_location_assignment PIN_AB13 -to FlexIO142
+set_location_assignment PIN_AB14 -to FlexIO144
+set_location_assignment PIN_AB15 -to FlexIO146
+set_location_assignment PIN_AB16 -to FlexIO148
+set_location_assignment PIN_AB17 -to FlexIO150
+set_location_assignment PIN_V1 -to FlexIO40
+set_location_assignment PIN_M3 -to FlexIO34
+set_location_assignment PIN_M4 -to FlexIO33
+set_location_assignment PIN_N1 -to FlexIO32
+set_location_assignment PIN_N2 -to FlexIO31
+set_location_assignment PIN_P1 -to FlexIO30
+set_location_assignment PIN_P2 -to FlexIO29
+set_location_assignment PIN_P3 -to FlexIO28
+set_location_assignment PIN_P4 -to FlexIO27
+set_location_assignment PIN_R1 -to FlexIO26
+set_location_assignment PIN_R2 -to FlexIO25
+set_location_assignment PIN_R3 -to FlexIO24
+set_location_assignment PIN_R4 -to FlexIO23
+set_location_assignment PIN_T5 -to FlexIO22
+set_location_assignment PIN_T4 -to FlexIO21
+set_location_assignment PIN_T3 -to FlexIO20
+set_location_assignment PIN_U1 -to FlexIO19
+set_location_assignment PIN_U2 -to FlexIO18
+set_location_assignment PIN_V3 -to FlexIO17
+set_location_assignment PIN_V4 -to FlexIO16
+set_location_assignment PIN_Y3 -to FlexIO15
+set_location_assignment PIN_Y4 -to FlexIO14
+set_location_assignment PIN_V5 -to FlexIO13
+set_location_assignment PIN_Y6 -to FlexIO12
+set_location_assignment PIN_W6 -to FlexIO11
+set_location_assignment PIN_V6 -to FlexIO10
+set_location_assignment PIN_Y7 -to FlexIO9
+set_location_assignment PIN_W7 -to FlexIO8
+set_location_assignment PIN_V7 -to FlexIO7
+set_location_assignment PIN_Y8 -to FlexIO6
+set_location_assignment PIN_W8 -to FlexIO5
+set_location_assignment PIN_V8 -to FlexIO4
+set_location_assignment PIN_V9 -to FlexIO3
+set_location_assignment PIN_N20 -to FlexIO95
+set_location_assignment PIN_N19 -to FlexIO96
+set_location_assignment PIN_N18 -to FlexIO97
+set_location_assignment PIN_V10 -to FlexIO80
+set_location_assignment PIN_W13 -to FlexIO71
+set_location_assignment PIN_Y13 -to FlexIO70
+set_location_assignment PIN_U14 -to FlexIO69
+set_location_assignment PIN_V14 -to FlexIO68
+set_location_assignment PIN_W14 -to FlexIO67
+set_location_assignment PIN_Y14 -to FlexIO66
+set_location_assignment PIN_V15 -to FlexIO65
+set_location_assignment PIN_V16 -to FlexIO64
+set_location_assignment PIN_W15 -to FlexIO63
+set_location_assignment PIN_Y15 -to FlexIO62
+set_location_assignment PIN_U15 -to FlexIO61
+set_location_assignment PIN_U16 -to FlexIO60
+set_location_assignment PIN_U17 -to FlexIO59
+set_location_assignment PIN_W17 -to FlexIO58
+set_location_assignment PIN_Y17 -to FlexIO57
+set_location_assignment PIN_T18 -to FlexIO56
+set_location_assignment PIN_M5 -to FlexIO55
+set_location_assignment PIN_W19 -to FlexIO54
+set_location_assignment PIN_P7 -to FlexIO53
+set_location_assignment PIN_U19 -to FlexIO52
+set_location_assignment PIN_N7 -to FlexIO51
+set_location_assignment PIN_W20 -to FlexIO50
+set_location_assignment PIN_M6 -to FlexIO49
+set_location_assignment PIN_J17 -to FlexIO48
+set_location_assignment PIN_L6 -to FlexIO47
+set_location_assignment PIN_G15 -to FlexIO46
+set_location_assignment PIN_G16 -to FlexIO45
+set_location_assignment PIN_F13 -to FlexIO44
+set_location_assignment PIN_G14 -to FlexIO43
+set_location_assignment PIN_G11 -to FlexIO42
+set_location_assignment PIN_F14 -to FlexIO41
+set_location_assignment PIN_P6 -to FlexIO98
+set_location_assignment PIN_U20 -to FlexIO99
+set_location_assignment PIN_T17 -to FlexIO102
+set_location_assignment PIN_T19 -to FlexIO103
+set_location_assignment PIN_R20 -to FlexIO104
+set_location_assignment PIN_R19 -to FlexIO105
+set_location_assignment PIN_R17 -to FlexIO106
+set_location_assignment PIN_P17 -to FlexIO107
+set_location_assignment PIN_P20 -to FlexIO108
+set_location_assignment PIN_N16 -to FlexIO109
+set_location_assignment PIN_R18 -to FlexIO110
+set_location_assignment PIN_M16 -to FlexIO111
+set_location_assignment PIN_G8 -to FlexIO120
+set_location_assignment PIN_Y21 -to FlexIO159
+set_location_assignment PIN_AA22 -to FlexIO158
+set_location_assignment PIN_AA21 -to FlexIO157
+set_location_assignment PIN_AA20 -to FlexIO155
+set_location_assignment PIN_AA19 -to FlexIO153
+set_location_assignment PIN_AB18 -to FlexIO152
+set_location_assignment PIN_AB19 -to FlexIO154
+set_location_assignment PIN_AB20 -to FlexIO156
+set_location_assignment PIN_Y22 -to FlexIO160
+set_location_assignment PIN_W2 -to FlexIO37
+set_location_assignment PIN_W1 -to FlexIO38
+set_location_assignment PIN_V2 -to FlexIO39
+set_location_assignment PIN_M1 -to FlexIO36
+set_location_assignment PIN_M2 -to FlexIO35
+set_location_assignment PIN_W10 -to FlexIO79
+set_location_assignment PIN_Y10 -to FlexIO78
+set_location_assignment PIN_U11 -to FlexIO77
+set_location_assignment PIN_V11 -to FlexIO76
+set_location_assignment PIN_U12 -to FlexIO75
+set_location_assignment PIN_V12 -to FlexIO74
+set_location_assignment PIN_U13 -to FlexIO73
+set_location_assignment PIN_V13 -to FlexIO72
+set_location_assignment PIN_N17 -to FlexIO112
+set_location_assignment PIN_H17 -to FlexIO113
+set_location_assignment PIN_H16 -to FlexIO114
+set_location_assignment PIN_F11 -to FlexIO115
+set_location_assignment PIN_G13 -to FlexIO116
+set_location_assignment PIN_G10 -to FlexIO117
+set_location_assignment PIN_F10 -to FlexIO118
+set_location_assignment PIN_F8 -to FlexIO119
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
