--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -331,6 +331,5 @@ set_global_assignment -name SDC_FILE TimingGenerator128b.sdc
 set_global_assignment -name QIP_FILE CommandFifo.qip
 set_global_assignment -name QIP_FILE StatusFifo.qip
 set_global_assignment -name SMF_FILE RAM_Clock_Switch.smf
-set_global_assignment -name QIP_FILE PLL_Mux.qip
-set_global_assignment -name QIP_FILE PLL_PCIClock.qip
+set_global_assignment -name QIP_FILE RAMClock_CTRL.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
