add the timing core
This includes a description of the logic in CoreTiming.md
as well as the state machine implementing it and the
ancillary logic which actually does things like counting
or latching signals onto the outputs.

--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -316,6 +316,7 @@ set_location_assignment PIN_G13 -to FlexIO116
 set_location_assignment PIN_G10 -to FlexIO117
 set_location_assignment PIN_F10 -to FlexIO118
 set_location_assignment PIN_F8 -to FlexIO119
+set_global_assignment -name VERILOG_FILE Core_Timing_Loop.v
 set_global_assignment -name VERILOG_FILE System_State.v
 set_global_assignment -name BDF_FILE CaptureSynchronizer.bdf
 set_global_assignment -name VERILOG_FILE RAM_Clock_Switch.v
@@ -337,4 +338,13 @@ set_global_assignment -name QIP_FILE Compare_LE5_U.qip
 set_global_assignment -name QIP_FILE InstrDecoder.qip
 set_global_assignment -name BDF_FILE CommandDecoder.bdf
 set_global_assignment -name QIP_FILE StateDecoder.qip
+set_global_assignment -name SMF_FILE Core_Timing_Loop.smf
+set_global_assignment -name BDF_FILE TimingCore.bdf
+set_global_assignment -name QIP_FILE Incr32b.qip
+set_global_assignment -name QIP_FILE Incr64b.qip
+set_global_assignment -name QIP_FILE Decr28b.qip
+set_global_assignment -name QIP_FILE Incr16b.qip
+set_global_assignment -name QIP_FILE IsZero28b.qip
+set_global_assignment -name QIP_FILE Eq32b.qip
+set_global_assignment -name QIP_FILE Eq16b.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
