switch to an asynchronous fetch engine
Fetch from memory into a FIFO, and then have the decoder
pull from the FIFO as needed with single-cycle latency.

This hides the latency from the memory pipelining required
to hit the timing requirements for the memory. It mostly
works, in that the device is much closer to running a sequence
flawlessly than ever before, but it still has occasional misfetches...

--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -365,4 +365,6 @@ set_global_assignment -name ALLOW_POWER_UP_DONT_CARE OFF
 set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
 set_global_assignment -name SAFE_STATE_MACHINE ON
 set_global_assignment -name PARALLEL_SYNTHESIS OFF
+set_global_assignment -name QIP_FILE FetchFIFO.qip
+set_global_assignment -name BDF_FILE FetchEngine.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
