make the CaptureSynchronizer synchronous
Everything I read says asynchronous logic is a bad idea and
Quartus insists that any signal applied to the clock input
of a flip-flop _is_ a clock, so change the CaptureSynchronizer
to a synchronous approximation and stop making Quartus think
random signals (e.g. CS[2]) are clocks.

--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -367,4 +367,5 @@ set_global_assignment -name SAFE_STATE_MACHINE ON
 set_global_assignment -name PARALLEL_SYNTHESIS OFF
 set_global_assignment -name QIP_FILE FetchFIFO.qip
 set_global_assignment -name BDF_FILE FetchEngine.bdf
+set_global_assignment -name QIP_FILE CmpZero2b.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
