--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -385,4 +385,7 @@ set_location_assignment LCCOMB_X38_Y26_N28 -to "SequenceBuffer:sequencebuffer|bu
 set_location_assignment LCCOMB_X38_Y26_N30 -to "SequenceBuffer:sequencebuffer|busmux:AddrMux|*"
 set_global_assignment -name CYCLONEIII_CONFIGURATION_DEVICE EPCS16
 set_global_assignment -name FORCE_CONFIGURATION_VCCIO ON
+set_global_assignment -name QIP_FILE ReconfigurablePLL.qip
+set_global_assignment -name QIP_FILE PllReconfigurator.qip
+set_global_assignment -name QIP_FILE PllSourceSwitch.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
