--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -386,4 +386,5 @@ set_global_assignment -name FORCE_CONFIGURATION_VCCIO ON
 set_global_assignment -name QIP_FILE ReconfigurablePLL.qip
 set_global_assignment -name QIP_FILE PllReconfigurator.qip
 set_global_assignment -name QIP_FILE PllSourceSwitch.qip
+set_global_assignment -name BDF_FILE IOLines.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
