--- a/TimingGenerator128b.qsf
+++ b/TimingGenerator128b.qsf
@@ -321,7 +321,7 @@ set_global_assignment -name BDF_FILE CaptureSynchronizer.bdf
 set_global_assignment -name VERILOG_FILE RAM_Clock_Switch.v
 set_global_assignment -name BDF_FILE Clocks.bdf
 set_global_assignment -name BDF_FILE Output_Drive.bdf
-set_global_assignment -name TCL_SCRIPT_FILE "../../../../../group/current/docs/commercial-info/marvintest/windows-software/GxFpga/Gx3500Pins.tcl"
+set_global_assignment -name TCL_SCRIPT_FILE Gx3500Pins.tcl
 set_global_assignment -name BDF_FILE TimingGenerator128b.bdf
 set_global_assignment -name BDF_FILE Registers.bdf
 set_global_assignment -name BDF_FILE SequenceBuffer.bdf
@@ -387,4 +387,5 @@ set_global_assignment -name QIP_FILE ReconfigurablePLL.qip
 set_global_assignment -name QIP_FILE PllReconfigurator.qip
 set_global_assignment -name QIP_FILE PllSourceSwitch.qip
 set_global_assignment -name BDF_FILE IOLines.bdf
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
